--- a/lab 1/grid/styles.css
+++ b/lab 1/grid/styles.css
@@ -5,11 +5,12 @@
 }
 
 body{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     display: grid;
+    overflow-x: hidden;
     grid-gap: 0;
-    grid-template-columns: 250px repeat(4,1fr);
+    grid-template-columns: 1fr repeat(4,1.5fr);
     grid-template-rows: 60px repeat(3,1fr);
     grid-template-areas: "section header header header header"
                          "section content content content content"
@@ -53,6 +54,7 @@ section{
     flex-direction: column;
     color: gray;
 }
+
 section h1{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: rgb(78, 78, 85);
@@ -101,3 +103,24 @@ body > img{
     width: 100%;
     height: 100%;
 }
+
+@media screen and (orientation:portrait) {
+    body{
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: 60px repeat(3,1fr);
+        grid-template-areas: " header header "
+                             " content content "
+                             "content content "
+                             " content content "
+                             " content content "
+                             " content content "
+                             " content content "
+                             " content content ";
+                             
+    }
+
+    section{
+        display: none;
+    }
+}
+
